--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -99,6 +99,7 @@
                     <a href="/profile" class="active">Profile</a>
                 <% } else { %>
                     <a href="/dashboard">Dashboard</a>
+                    <a href="/help">Help</a>
                     <a href="/profile" class="active">Profile</a>
                 <% } %>
                 <div class="user-name">👤 <%= user.name %></div>
